<resources>
    <string name="app_name">Movies and TV Show List</string>
    <string name="movies_title">Movies</string>
    <string name="tv_show_title">TV Shows</string>
    <string name="title">Movies Title</string>
    <string name="deskripsi_movie">Deskripsi</string>
    <string name="tahun">(2018)</string>
    <string name="year">2019</string>
    <string name="yeartext">Year</string>
    <string name="desc">Description</string>
    <string name="change_language_settings">Change Language</string>

    <string name="yConfirm">Click Yes to Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alertServer">Server Problem !</string>
    <string name="title_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Movies Favorite fragment</string>
    <string name="hello_tvshows_fragment">Fragment tvshows</string>
    <string name="hello_movies_fragment">movies favorites</string>
    <string name="succesAddToFavorite">Berhasil Meambahkan Ke Favorite</string>
    <string name="failedAddToFavorit">Gagal Menambahkan ke Favorite</string>
    <string name="deskripsi_tvshow">Deskripsi</string>
    <string name="tvshows_title">Title</string>
    <string name="titleDelete">Want to Delete ?</string>
    <string name="title_favorites_movie_tv">Movies and TV Favorites</string>
</resources>