<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgroud"
    android:layout_gravity="left"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="2dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/img_item_photo_id"
            android:layout_width="166dp"
            android:layout_height="170dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="@string/movies_title" />

            <TextView
                android:id="@+id/tv_year_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tahun" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_desc_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/deskripsi_movie" />
    </LinearLayout>
</androidx.cardview.widget.CardView>